--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -1,11 +1,13 @@
-FROM wordpress:php7.4-fpm-alpine
+FROM wordpress:php7.3-fpm-alpine
 
 ENV PHP_MEMORY_LIMIT=256M \
+    PHP_MAX_INPUT_VARS=1000 \
     PHP_UPLOAD_MAX_FILESIZE=50M \
     PHP_POST_MAX_SIZE=50M \
     PHP_MAX_EXECUTION_TIME=30
 
 RUN adduser -D -u 1337 kool \
+    && addgroup kool www-data \
     # dockerize
     && curl -L https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-alpine-linux-amd64-v0.6.1.tar.gz | tar xz \
     && mv dockerize /usr/local/bin/dockerize \
@@ -14,6 +16,7 @@ RUN adduser -D -u 1337 kool \
     && pecl install redis \
     && docker-php-ext-enable redis \
     && cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini \
+    && sed -i "s/user\ \=.*/user\ \= kool/g" /usr/local/etc/php-fpm.d/www.conf \
     # cleanup
     && apk del .build-deps \
     && rm -rf /var/cache/apk/* /tmp/*
