--- a/7.4-nginx/Dockerfile
+++ b/7.4-nginx/Dockerfile
@@ -1,25 +1,10 @@
-FROM kooldev/wordpress:7.4
+FROM wordpress:php7.4-fpm-alpine as wordpress
+FROM kooldev/php:7.4-nginx
 
-ENV PHP_FPM_LISTEN=/run/php-fpm.sock \
-    NGINX_LISTEN=80 \
-    NGINX_ROOT=/var/www/html \
-    NGINX_CLIENT_MAX_BODY_SIZE=25M \
-    NGINX_PHP_FPM=unix:/run/php-fpm.sock \
-    NGINX_FASTCGI_READ_TIMEOUT=60s
+ENV NGINX_ROOT=/app
 
-RUN curl -L https://github.com/ochinchina/supervisord/releases/download/v0.6.3/supervisord_static_0.6.3_linux_amd64 -o /usr/local/bin/supervisord \
-    && chmod +x /usr/local/bin/supervisord \
-    && apk add --no-cache nginx \
-    && sed -i "s|^listen\ \=.*|listen\ \= $PHP_FPM_LISTEN|g" /usr/local/etc/php-fpm.d/zz-docker.conf \
-    && echo "listen.owner = kool" >> /usr/local/etc/php-fpm.d/zz-docker.conf \
-    && echo "listen.group = kool" >> /usr/local/etc/php-fpm.d/zz-docker.conf \
-    && echo "listen.mode = 0666" >> /usr/local/etc/php-fpm.d/zz-docker.conf \
-    && sed -i "s|^user .*|user\ kool;|g" /etc/nginx/nginx.conf
+COPY --from=wordpress --chown=kool:kool /usr/src/wordpress /kool/wordpress
+COPY --from=wordpress --chown=kool:kool /var/www/html/wp-content /app/wp-content
+COPY entrypoint /kool/entrypoint
 
-COPY supervisor.conf /kool/supervisor.conf
-COPY default.tmpl /kool/default.tmpl
-
-EXPOSE 80
-
-ENTRYPOINT [ "dockerize", "-template", "/kool/kool.tmpl:/usr/local/etc/php/conf.d/kool.ini", "-template", "/kool/default.tmpl:/etc/nginx/conf.d/default.conf", "docker-entrypoint.sh" ]
-CMD [ "supervisord", "-c", "/kool/supervisor.conf" ]
+RUN chmod -R 777 wp-content && chmod +x /kool/entrypoint
