--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -1,27 +1,9 @@
-FROM wordpress:php7.4-fpm-alpine
+FROM wordpress:php7.4-fpm-alpine as wordpress
+FROM kooldev/php:7.4
 
-ENV PHP_MEMORY_LIMIT=256M \
-    PHP_MAX_INPUT_VARS=1000 \
-    PHP_UPLOAD_MAX_FILESIZE=50M \
-    PHP_POST_MAX_SIZE=50M \
-    PHP_MAX_EXECUTION_TIME=30
 
-RUN adduser -D -u 1337 kool \
-    && addgroup kool www-data \
-    # dockerize
-    && curl -L https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-alpine-linux-amd64-v0.6.1.tar.gz | tar xz \
-    && mv dockerize /usr/local/bin/dockerize \
-    # php
-    && apk add --no-cache --virtual .build-deps $PHPIZE_DEPS \
-    && pecl install redis \
-    && docker-php-ext-enable redis \
-    && cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini \
-    && sed -i "s/user\ \=.*/user\ \= kool/g" /usr/local/etc/php-fpm.d/www.conf \
-    # cleanup
-    && apk del .build-deps \
-    && rm -rf /var/cache/apk/* /tmp/*
+COPY --from=wordpress --chown=kool:kool /usr/src/wordpress /kool/wordpress
+COPY --from=wordpress --chown=kool:kool /var/www/html/wp-content /app/wp-content
+COPY entrypoint /kool/entrypoint
 
-COPY kool.ini /kool/kool.tmpl
-
-ENTRYPOINT [ "dockerize", "-template", "/kool/kool.tmpl:/usr/local/etc/php/conf.d/kool.ini", "docker-entrypoint.sh" ]
-CMD [ "php-fpm" ]
+RUN chmod -R 777 wp-content && chmod +x /kool/entrypoint
