--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,13 +1,13 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ 7.1, 7.2, 7.3, 7.4 ]
+        version: [ 7.2, 7.3, 7.4 ]
 
     steps:
     - name: Checkout code
