--- a/7.2-prod/Dockerfile
+++ b/7.2-prod/Dockerfile
@@ -2,6 +2,14 @@ FROM wordpress:php7.2-fpm-alpine as wordpress
 FROM kooldev/php:7.2-prod
 
 
+RUN echo "Building Deps" \
+    # build-deps
+    && apk add --no-cache --virtual .build-deps $PHPIZE_DEPS \
+    && docker-php-ext-install -j$(nproc) mysqli \
+    # cleanup
+    && apk del .build-deps \
+    && rm -rf /var/cache/apk/* /tmp/*
+
 COPY --from=wordpress --chown=kool:kool /usr/src/wordpress /kool/wordpress
 COPY --from=wordpress --chown=kool:kool /var/www/html/wp-content /app/wp-content
 COPY entrypoint /kool/entrypoint
