--- a/7.4-nginx/Dockerfile
+++ b/7.4-nginx/Dockerfile
@@ -3,6 +3,14 @@ FROM kooldev/php:7.4-nginx
 
 ENV NGINX_ROOT=/app
 
+RUN echo "Building Deps" \
+    # build-deps
+    && apk add --no-cache --virtual .build-deps $PHPIZE_DEPS \
+    && docker-php-ext-install -j$(nproc) mysqli \
+    # cleanup
+    && apk del .build-deps \
+    && rm -rf /var/cache/apk/* /tmp/*
+
 COPY --from=wordpress --chown=kool:kool /usr/src/wordpress /kool/wordpress
 COPY --from=wordpress --chown=kool:kool /var/www/html/wp-content /app/wp-content
 COPY entrypoint /kool/entrypoint
