--- a/7.4-prod/Dockerfile
+++ b/7.4-prod/Dockerfile
@@ -1,3 +1,4 @@
+FROM wordpress:cli-php7.4 as wordpress-cli
 FROM wordpress:php7.4-fpm-alpine as wordpress
 FROM kooldev/php:7.4-prod
 
@@ -10,6 +11,7 @@ RUN echo "Building Deps" \
     && apk del .build-deps \
     && rm -rf /var/cache/apk/* /tmp/*
 
+COPY --from=wordpress-cli /usr/local/bin/wp /usr/local/bin/wp
 COPY --from=wordpress --chown=kool:kool /usr/src/wordpress /kool/wordpress
 COPY --from=wordpress --chown=kool:kool /var/www/html/wp-content /app/wp-content
 COPY entrypoint /kool/entrypoint
