--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -14,6 +14,9 @@ RUN echo "Building Deps" \
 COPY --from=wordpress-cli /usr/local/bin/wp /usr/local/bin/wp
 COPY --from=wordpress --chown=kool:kool /usr/src/wordpress /kool/wordpress
 COPY --from=wordpress --chown=kool:kool /var/www/html/wp-content /app/wp-content
-COPY entrypoint /kool/entrypoint
+COPY entrypoint /kool/wordpress-entrypoint
 
-RUN chmod -R 777 wp-content && chmod +x /kool/entrypoint
+RUN chmod -R 777 wp-content && chmod +x /kool/wordpress-entrypoint
+
+ENTRYPOINT [ "/kool/wordpress-entrypoint" ]
+CMD [ "supervisord", "-c", "/kool/supervisor.conf" ]
