--- a/kool.yml
+++ b/kool.yml
@@ -8,3 +8,8 @@ scripts:
     - docker build -t kooldev/wordpress:7.4-prod 7.4-prod
     - docker build -t kooldev/wordpress:7.4-nginx 7.4-nginx
     - docker build -t kooldev/wordpress:7.4-nginx-prod 7.4-nginx-prod
+    # PHP 8.0
+    - docker build --pull -t kooldev/wordpress:8.0 8.0
+    - docker build -t kooldev/wordpress:8.0-prod 8.0-prod
+    - docker build -t kooldev/wordpress:8.0-nginx 8.0-nginx
+    - docker build -t kooldev/wordpress:8.0-nginx-prod 8.0-nginx-prod
