--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ 7.4, "8.0" ]
+        version: [ 7.4, "8.0", 8.1 ]
         type: [ '', '-prod' ]
 
     steps:
