--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,10 @@
 name: CI/CD
 
-on: [push, workflow_dispatch]
+on:
+  push:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 0'
 
 env:
   DOCKER_BUILDKIT: 1
@@ -10,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ '7.4', '8.0', '8.1' ]
+        version: [ '7.4', '8.0', '8.1', '8.2' ]
         type: [ '', '-prod' ]
 
     steps:
