--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ '7.4', '8.0', '8.1', '8.2' ]
+        version: [ '7.4', '8.0', '8.1', '8.2', '8.3' ]
         type: [ '', '-prod' ]
 
     steps:
