--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ '7.4', '8.0', '8.1', '8.2', '8.3' ]
+        version: [ '8.0', '8.1', '8.2', '8.3' ]
         type: [ '', '-prod' ]
 
     steps:
@@ -25,13 +25,6 @@ jobs:
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build and export to Docker
-      uses: docker/build-push-action@v3
-      with:
-        context: ${{ matrix.version }}${{ matrix.type }}
-        load: true
-        tags: kooldev/wordpress:${{ matrix.version }}${{ matrix.type }}
-
     - name: Build and export to Docker (nginx)
       uses: docker/build-push-action@v3
       with:
@@ -41,18 +34,13 @@ jobs:
 
     - name: Test docker images PHP executable
       run: |
-        docker run kooldev/wordpress:${{ matrix.version }}${{ matrix.type }} php -v
-        docker run kooldev/wordpress:${{ matrix.version }}${{ matrix.type }} wp --allow-root --version
-
         docker run kooldev/wordpress:${{ matrix.version }}-nginx${{ matrix.type }} php -v
         docker run kooldev/wordpress:${{ matrix.version }}-nginx${{ matrix.type }} wp --allow-root --version
-
         docker run kooldev/wordpress:${{ matrix.version }}-nginx${{ matrix.type }} nginx -v
         docker run kooldev/wordpress:${{ matrix.version }}-nginx${{ matrix.type }} supervisord version
 
     - name: Test docker images wordpress code
       run: |
-        docker run kooldev/wordpress:${{ matrix.version }}${{ matrix.type }} php /kool/wordpress/index.php
         docker run kooldev/wordpress:${{ matrix.version }}-nginx${{ matrix.type }} php /kool/wordpress/index.php
 
     - name: Login to DockerHub
@@ -65,17 +53,7 @@ jobs:
     - name: Push to Hub
       if: github.ref == 'refs/heads/master' && github.repository == 'kool-dev/docker-wordpress'
       run: |
-        docker push kooldev/wordpress:${{ matrix.version }}${{ matrix.type }}
         docker push kooldev/wordpress:${{ matrix.version }}-nginx${{ matrix.type }}
-
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      if: github.ref == 'refs/heads/master' && github.repository == 'kool-dev/docker-wordpress'
-      with:
-        context: ${{ matrix.version }}${{ matrix.type }}
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: kooldev/wordpress:${{ matrix.version }}${{ matrix.type }}
 
     - name: Build and push (nginx)
       uses: docker/build-push-action@v3
